fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ margin-top: -8%;
       height: auto;
     }
     .generator {
-      padding: 24px;
+      padding: 64px 24px;
     }
     
 }
